--- a/index.html
+++ b/index.html
@@ -1,21 +1,44 @@
 <!DOCTYPE html>
-<html lang="br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explore dezenas d variações de bebida favorita">
+<html lang="pt-br"> 
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="widht=device-width, initial-scale=1.0">
+        <meta name="description" content="Explore dezenas de variações da bebida favorita entre os devs ao redor do mundo!">
 
-    <!-- Inserindo Favicon -->
-    <link rel="shortcut icon" href="assets/favicon.jpg" type="image/x-icon">
+        <!--Inserindo favicon -->
+        <link rel="shortcut" href="assets/favicon.jpg" type="image/x-icon">
 
-    <!-- Link para CSS -->
-    <link rel="stylesheet" href="main.css">
+        <!-- Link para CSS -->
+         <link rel="stylesheet" href="style.css">
 
-    <title>BelleCoffe</title>
-</head>
-<body>
+         <title>BalleCoffe</title>
+    </head>
+    <body>
+        <!-- Cabeçalho (Header) -->
+         <header>
+            <nav>
+                <span class="title">BalleCoffe</span>
 
-   
+                <ul class="menu" id="MenuItems">
+                    <li><a>Home</a></li>
+                    <li>
+                        <a href="#receitas" style="text-decoration: none;color: #fff2e780; "onmouseover="this.style.color= '#fff';"
+                         onmouseout="this.style.color= '#fff2e780';">
+                        Receitas
+                        </a>
+                    </li>
+                    <li><a>Novidades</a></li>
+                       <li><a>Melhor avaliadas</a></li>
+                </ul>
+
+                <a class="github" href="https://github.com" target="_blank">Github</a>
+
+                <!-- Menu hamburguer (telas menores ) -->
+                 <img src="assets/menu.png" alt="" class="menu-icon" onclick="menutoggle()"/>
+            </nav>
+         </header>
+
+           
     <!-- _____________________________________________________________________________ -->
     <!-- Sessão principal (Main) -->
 
