Realizado primeiro desafio

--- a/header.html
+++ b/header.html
@@ -9,7 +9,7 @@
         <link rel="shortcut" href="assets/favicon.jpg" type="image/x-icon">
 
         <!-- Link para CSS -->
-         <link rel="stylesheet" href="1_Header.css">
+         <link rel="stylesheet" href="header.css">
 
          <title>BalleCoffe</title>
     </head>
