--- a/receita.html
+++ b/receita.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="assets/favicon.jpg" type="image/x-icon">
 
     <!-- Link para CSS -->
-    <link rel="stylesheet" href="receitas.css">
+    <link rel="stylesheet" href="receita.css">
 
     <title>BalleCoffe</title>
 </head>
